--- a/ONS_Monthly_Deaths_Data_England_and_Wales/ONS_Monthly_Deaths_Data_England_and_Wales.ipynb
+++ b/ONS_Monthly_Deaths_Data_England_and_Wales/ONS_Monthly_Deaths_Data_England_and_Wales.ipynb
@@ -19,8 +19,8 @@
    "source": [
     "## 1. Introduction\n",
     "\n",
-    "This notebook shows how to use `readxl` package to retreive the **Deaths registered monthly in England and Wales** Dataset from\n",
-    "[Office for National Statistics](https://www.ons.gov.uk/peoplepopulationandcommunity/birthsdeathsandmarriages/deaths/datasets/monthlyfiguresondeathsregisteredbyareaofusualresidence) and create various plots to show the number of deaths with `ggplots`.\n",
+    "This notebook shows how to use `readxl` package to retreive the *Deaths registered monthly in England and Wales* Dataset from\n",
+    "[Office for National Statistics](https://www.ons.gov.uk/peoplepopulationandcommunity/birthsdeathsandmarriages/deaths/datasets/monthlyfiguresondeathsregisteredbyareaofusualresidence) and create various plots to show the number of deaths with `ggplot2`.\n",
     "\n",
     "### About this dataset\n",
     "\n",
