--- a/ONS_Monthly_Deaths_Data_England_and_Wales/ONS_Monthly_Deaths_Data_England_and_Wales.ipynb
+++ b/ONS_Monthly_Deaths_Data_England_and_Wales/ONS_Monthly_Deaths_Data_England_and_Wales.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "University of Manchester\n",
     "\n",
-    "January 28, 2021"
+    "February 26, 2021"
    ]
   },
   {
@@ -51,9 +51,9 @@
      "text": [
       "── \u001b[1mAttaching packages\u001b[22m ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── tidyverse 1.3.0 ──\n",
       "\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mtibble \u001b[39m 3.0.5     \u001b[32m✔\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.3\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mtibble \u001b[39m 3.0.6     \u001b[32m✔\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.4\n",
       "\u001b[32m✔\u001b[39m \u001b[34mtidyr  \u001b[39m 1.1.2     \u001b[32m✔\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mreadr  \u001b[39m 1.4.0     \u001b[32m✔\u001b[39m \u001b[34mforcats\u001b[39m 0.5.0\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mreadr  \u001b[39m 1.4.0     \u001b[32m✔\u001b[39m \u001b[34mforcats\u001b[39m 0.5.1\n",
       "\u001b[32m✔\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4     \n",
       "\n",
       "── \u001b[1mConflicts\u001b[22m ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── tidyverse_conflicts() ──\n",
@@ -169,6 +169,19 @@
     "    }\n",
     "    data <- rbind(data, unlist(n))\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If you are using Jupyter Notebook, please check on your terminal that the download has completed at this stage, e.g.:\n",
+    "\n",
+    "```\n",
+    "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+    "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+    "100  206k    0  206k    0     0  3385k      0 --:--:-- --:--:-- --:--:-- 3385k\n",
+    "```"
    ]
   },
   {
@@ -369,7 +382,8 @@
     "    mutate(across(!Deaths, as.factor)) %>%             # Convert character columns to factor type\n",
     "    mutate(Month = factor(Month, levels = month.abb))  # relevel month to the correct order\n",
     "\n",
-    "d$Pre2020 <- ifelse(d$Year != 2020, TRUE, FALSE)\n",
+    "# Pre-2020 or not\n",
+    "d$Pre2020 <- ifelse(as.Date(ISOdate(years, 1, 1)) < \"2020-01-01\", TRUE, FALSE)\n",
     "head(d)"
    ]
   },
@@ -867,22 +881,22 @@
        "[1] stats     graphics  grDevices utils     datasets  methods   base     \n",
        "\n",
        "other attached packages:\n",
-       " [1] forcats_0.5.0   stringr_1.4.0   dplyr_1.0.3     purrr_0.3.4     readr_1.4.0     tidyr_1.1.2    \n",
-       " [7] tibble_3.0.5    tidyverse_1.3.0 scales_1.1.1    ggplot2_3.3.3   readxl_1.3.1   \n",
+       " [1] forcats_0.5.1   stringr_1.4.0   dplyr_1.0.4     purrr_0.3.4     readr_1.4.0     tidyr_1.1.2    \n",
+       " [7] tibble_3.0.6    tidyverse_1.3.0 scales_1.1.1    ggplot2_3.3.3   readxl_1.3.1   \n",
        "\n",
        "loaded via a namespace (and not attached):\n",
-       " [1] Rcpp_1.0.6        lubridate_1.7.9.2 lattice_0.20-41   ps_1.5.0          assertthat_0.2.1 \n",
-       " [6] digest_0.6.27     IRdisplay_1.0     R6_2.5.0          cellranger_1.1.0  repr_1.1.3       \n",
-       "[11] backports_1.2.1   reprex_0.3.0      evaluate_0.14     httr_1.4.2        pillar_1.4.7     \n",
-       "[16] rlang_0.4.10      uuid_0.1-4        rstudioapi_0.13   Matrix_1.3-2      labeling_0.4.2   \n",
-       "[21] splines_4.0.3     munsell_0.5.0     broom_0.7.3       compiler_4.0.3    modelr_0.1.8     \n",
-       "[26] pkgconfig_2.0.3   base64enc_0.1-3   mgcv_1.8-33       htmltools_0.5.1.1 tidyselect_1.1.0 \n",
-       "[31] fansi_0.4.2       crayon_1.3.4      dbplyr_2.0.0      withr_2.4.0       grid_4.0.3       \n",
-       "[36] nlme_3.1-151      jsonlite_1.7.2    gtable_0.3.0      lifecycle_0.2.0   DBI_1.1.1        \n",
-       "[41] magrittr_2.0.1    cli_2.2.0         stringi_1.5.3     farver_2.0.3      fs_1.5.0         \n",
-       "[46] xml2_1.3.2        ellipsis_0.3.1    generics_0.1.0    vctrs_0.3.6       IRkernel_1.1.1   \n",
-       "[51] tools_4.0.3       Cairo_1.5-12.2    glue_1.4.2        hms_1.0.0         colorspace_2.0-0 \n",
-       "[56] rvest_0.3.6       pbdZMQ_0.3-4      haven_2.3.1      "
+       " [1] pbdZMQ_0.3-4      tidyselect_1.1.0  repr_1.1.3        lattice_0.20-41   splines_4.0.3    \n",
+       " [6] haven_2.3.1       colorspace_2.0-0  vctrs_0.3.6       generics_0.1.0    htmltools_0.5.1.1\n",
+       "[11] mgcv_1.8-33       base64enc_0.1-3   rlang_0.4.10      pillar_1.4.7      glue_1.4.2       \n",
+       "[16] withr_2.4.1       DBI_1.1.1         dbplyr_2.1.0      modelr_0.1.8      uuid_0.1-4       \n",
+       "[21] lifecycle_0.2.0   munsell_0.5.0     gtable_0.3.0      cellranger_1.1.0  rvest_0.3.6      \n",
+       "[26] evaluate_0.14     labeling_0.4.2    Cairo_1.5-12.2    ps_1.5.0          broom_0.7.4      \n",
+       "[31] IRdisplay_1.0     Rcpp_1.0.6        backports_1.2.1   IRkernel_1.1.1    jsonlite_1.7.2   \n",
+       "[36] farver_2.0.3      fs_1.5.0          hms_1.0.0         digest_0.6.27     stringi_1.5.3    \n",
+       "[41] grid_4.0.3        cli_2.3.0         tools_4.0.3       magrittr_2.0.1    crayon_1.4.1     \n",
+       "[46] pkgconfig_2.0.3   Matrix_1.3-2      ellipsis_0.3.1    xml2_1.3.2        reprex_1.0.0     \n",
+       "[51] lubridate_1.7.9.2 assertthat_0.2.1  httr_1.4.2        rstudioapi_0.13   R6_2.5.0         \n",
+       "[56] nlme_3.1-152      compiler_4.0.3   "
       ]
      },
      "metadata": {},
